Enlargen content height to avoid affix jumping

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,7 +16,7 @@ $shadow-color: #195a36;
 /* universal */
 
 .content {
-  min-height: 550px;
+  min-height: 1000px;
 }
 
 body {
@@ -802,7 +802,7 @@ select {
 
   #sidebar.affix {
     position: fixed;
-    top: 84px;
+    top: 83px;
     width: 350px;
   }
 
